Small fix in algorithm - forgot to commit it

--- a/algorytm/algor.tex
+++ b/algorytm/algor.tex
@@ -146,7 +146,7 @@
     \resetlinenumber[1]
     \begin{description}
         \item [DEPART\_SUBMAR] informacja, że łódź, w której dany proces przebywa właśnie wypływa z portu.
-        \item [\textcolor{green}{DEPART\_SUBMAR\_NOT\_FULL}] \textcolor{green}{informacja, że łódź, w której dany proces przebywa właśnie wypływa z portu nie do końca zapełniona. Proces, który otrzyma tę wiadomość będzie mógł oznaczyć wszystkie łodzie, w których kolejce ktoś się znajduje jako niedostępne.}
+        \item [\textcolor{green}{DEPART\_SUBMAR\_NOT\_FULL}] \textcolor{green}{informacja, że łódź, w której dany proces przebywa właśnie wypływa z portu, mimo że nie jest zapełniona. Proces, który otrzyma tę wiadomość będzie mógł oznaczyć wszystkie łodzie, w których kolejce ktoś się znajduje jako niedostępne, ponieważ one również właśnie wyruszają.}
     \end{description}
 \end{frame}
 
